mo spacing fixes

--- a/themes/bootscore-child/theme_components/scss/_bootscore-custom.scss
+++ b/themes/bootscore-child/theme_components/scss/_bootscore-custom.scss
@@ -6,7 +6,7 @@
 // Because this file is compiled after Bootstrap, you're also able to use Bootstrap mixins for better code.
 // Some examples can be found here: https://bootscore.me/documentation/bootstrap-css-sass
 
-$max-width: 1400px;
+$max-width: 1300px;
 
 body {
     background: #f1f1f1 url(../../assets/images/bg_pattern.jpg);
